2014-08-05 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed that unknown modules would be
	set to normal if its status is not normal, when new data
	arrives but ff_threshold is greater than 0.

2014-07-30  Ramon Novoa  <rnovoa@artica.es>

	* util/trap_rate.sh: Added to repository. Script to calculate the rate of
	  SNMP traps received by snmptrapd.

2014-07-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Set unknown modules to normal if new data
	  arrives but ff_threshold is greater than 0.

2014-07-28  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf.new,
	  lib/PandoraFMS/Config.pm: Added configuration tokens to disable the
	  translation of enterprise strings and variable bindings (SNMP console).

	* lib/PandoraFMS/SNMPServer.pm: Added thread support to the SNMP console.

	* lib/PandoraFMS/DB.pm: Fixed a warning.

2014-07-25  Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/GIS.pm, lib/PandoraFMS/DB.pm,
	lib/PandoraFMS/Core.pm, lib/PandoraFMS/ReconServer.pm,
	lib/PandoraFMS/DataServer.pm: tiny fixes for to improve the support
	of PostgreSQL.

2014-07-25  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_db.pl: Fixed error when 'dbengine' token is not defined
	in pandora_server.conf with enterprise installed.

2014-07-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* util/plugin/snmp_remote.pl: some fixed for the snmp v3.

2014-06-17  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Added macros
	'_alert_critical_instructions_' and
	'_alert_warning_instructions_'.

2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>

	* util/pandora_manage.pl: To handle multi-byte strings in
	command line arguments (assumes utf-8).

2014-07-08 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_manage.pl: Fixed problem
	with entities.

2014-07-08 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_manage.pl: Fixed help screen.

2014-07-08 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_manage.pl